--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -23,3 +23,6 @@ jobs:
 
     - name: Test
       run: go test -v ./...
+
+    - name: Deploy to App Engine
+      uses: google-github-actions/deploy-appengine@v0.4.0
