--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -26,6 +26,10 @@ jobs:
 
     - name: Set up gcloud Cloud SDK environment
       uses: google-github-actions/setup-gcloud@v0.2.0
+      with:
+        project_id: ${{ gftp-329818 }}
+        service_account_key: ${{ secrets.GCP_SA_KEY }}
+        export_default_credentials: true
 
 
     - name: Deploy to App Engine
