--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -23,8 +23,13 @@ jobs:
 
     - name: Test
       run: go test -v ./...
-    
-    - id: deploy
-      uses: google-github-actions/deploy-appengine@main
+      
+    - name: Set up Cloud SDK
+      uses: google-github-actions/setup-gcloud@master
       with:
-        credentials: ${{ secrets.gcp_credentials }}
+        project_id: ${{ secrets.GCP_PROJECT_ID }}
+        service_account_key: ${{ secrets.GCP_SA_KEY }}
+        export_default_credentials: true
+
+    - name: Use gcloud CLI
+      run: gcloud info
