--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -33,3 +33,12 @@ jobs:
 
     - name: Use gcloud CLI
       run: gcloud info
+      
+    - name: Deploy to App Engine
+      uses: google-github-actions/deploy-appengine@v0.2.0
+      with:
+        deliverables: app
+        project_id: ${{ secrets.GCP_PROJECT }}
+        credentials: ${{ secrets.GCP_SA_KEY }}
+        promote: false
+        version: v1
